# thesis

./: .gitignore  Mind map.canvas
.obsidian/: workspace.json
A Large-Scale Study of ML-Related Python Projects/: Annotations.md
Building a modern data platform based on the data lakehouse architecture and cloud-native ecosystem/: Annotations.md
Lakehouse - A New Generation of Open Platforms that Unify Data Warehousing and Advanced Analytics/: Annotations.md
Realising Data-Centric Scientific Workflows with Provenance-Capturing on Data Lakes/: Annotations.md
benchmark/: bla.json  compose.delta.yaml  compose.iceberg.yaml  compose.yaml  lakehouse.py  main.py  pyproject.toml
benchmark/assets/polaris/: create-catalog.sh  obtain-token.sh
ducklake/: compose.yaml  events.duckdb  kafka_producer.py  main.py  pyproject.toml  pyrightconfig.json  streaming.py
frauddetection/: dependency-reduced-pom.xml  pom.xml
lakehouses/ducklake/: kafka_producer.py  pyproject.toml  streaming.py
lakehouses/ducklake/ducklake/: compose.yaml  streaming.py
lakehouses/ducklake/scripts/: purge-ducklake.sh
lakehouses/iceberg/: README.md  bla.json  compose.yaml  kafka_producer.py  main.py  pyproject.toml
lakehouses/iceberg/assets/polaris/: create-catalog.sh  obtain-token.sh
lakehouses/iceberg/scripts/: bootstrap-polaris.sh  create-polaris-catalog.sh  start-polaris.sh
pyflink-example/: main.py  pyproject.toml
vault/: Concepts and definitions.md  Meeting notes with Pedro (08-09-2025).md  Mind map.canvas  Thesis.md  Todo.md  Untitled.canvas  streaming_blogpost.md
(+48 files in other folders)
