[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-manager>=1.9.0",
    "deltalake>=1.2.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyiceberg[pyarrow,sql-postgres]>=0.10.0",
    "pyspark>=4.0.1",
]
